<resources>
    <string name="app_name">GSS</string>
    <string name="navigation_button">Navigation Button</string>
    <string name="user_profile">User Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="customer_care">Customer Care</string>
    <string name="feedback">Feedback</string>
    <string name="heading_image">Heading Image</string>
    <string name="events">Events</string>
    <string name="event">event</string>
    <string name="event2">event</string>
    <string name="events3">Events</string>
    <string name="event4">event1</string>
    <string name="gall_nav_button">Navigation Button</string>
    <string name="admin_heading_image">Heading Image</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="booking_details">Booking Details</string>
    <string name="bookingdetails">Booking Details</string>
    <string name="user_details">User details</string>
    <string name="userdetails">User Details</string>
    <string name="events_details">Events</string>
    <string name="add_events">Add Events</string>
    <string name="gallery_details">Gallery details</string>
    <string name="add_gallery">Add Gallery</string>
    <string name="add_image">Add Image</string>
    <string name="password">Password</string>
    <string name="save">save</string>
    <string name="navigationbutton">Navigation Button</string>
    <string name="headingimage">Heading Image</string>
    <string name="calender">Calender</string>
    <string name="headingImage">Heading Image</string>
    <string name="feedBack">Feedback</string>
    <string name="customercare">Customer Care</string>
    <string name="heading_Image">Heading Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="toggle_confirm_password_visibility">Toggle Confirm Password Visibility</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="calendar">Calendar</string>
    <string name="Events">Events</string>
    <string name="EvEnts">Events</string>
    <string name="booking">Booking</string>
    <string name="Booking">Booking</string>
    <string name="gallery">Gallery</string>
    <string name="Gallery">Gallery</string>
    <string name="navigation_Button">Navigation Button</string>
    <string name="Heading_Image">Heading Image</string>
    <string name="Calender">calender</string>
</resources>