<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbkg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbkg"
        tools:context=".UserDashboardActivity">
        <ImageView
            android:id="@+id/navButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="21dp"
            android:contentDescription="@string/navigation_button"
            android:src="@drawable/ic_menu" />

        <RelativeLayout
            android:id="@+id/sidebarLayout"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="#B0606060"
            android:visibility="gone">

            <ImageView
                android:id="@+id/circularUserProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dp"
                android:background="@drawable/custom_edittext"
                android:contentDescription="@string/user_profile"
                android:src="@drawable/ic_baseline_person_24" />

            <TextView
                android:id="@+id/username"
                android:layout_width="273dp"
                android:layout_height="46dp"
                android:layout_below="@id/circularUserProfile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_edittext"
                android:text=""
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold" />
            <Button
                android:id="@+id/editProfileButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_edittext"
                android:text="@string/edit_profile" />
            <Button
                android:id="@+id/customerCareButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/editProfileButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_edittext"
                android:text="@string/customer_care" />
            <Button
                android:id="@+id/feedbackButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/customerCareButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_edittext"
                android:text="@string/feedback" />
        </RelativeLayout>
        <ImageView
            android:id="@+id/heading"
            android:layout_width="357dp"
            android:layout_height="203dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/heading_image"
            android:elevation="6dp"
            android:fadingEdge="horizontal"
            android:src="@drawable/heading_image1"
            android:visibility="visible" />
        <androidx.cardview.widget.CardView
            android:id="@+id/eventsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heading"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_edittext"
            android:visibility="visible"
            app:cardElevation="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:drawable/screen_background_dark"
                android:backgroundTint="#424242"
                android:orientation="vertical"
                android:padding="24dp"
                android:visibility="visible">
                <TextView
                    android:id="@+id/eventsPage"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/custom_edittext"
                    android:paddingTop="10dp"
                    android:text="@string/events"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:id="@+id/event1Layout"
                        android:layout_width="0dp"
                        android:layout_height="152dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edittext"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="visible">
                        <ImageView
                            android:id="@+id/event_1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/event"
                            android:padding="10dp"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp"
                            android:src="@drawable/event_1" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/event2Layout"
                        android:layout_width="0dp"
                        android:layout_height="152dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edittext"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="visible">
                        <ImageView
                            android:id="@+id/gallery2Layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/event2"
                            android:padding="10dp"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp"
                            android:src="@drawable/event_2" />

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:id="@+id/event3Layout"
                        android:layout_width="0dp"
                        android:layout_height="152dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edittext"
                        android:gravity="center"
                        android:visibility="visible"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/gallery3Layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/events3"
                            android:padding="10dp"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp"
                            android:src="@drawable/event_3" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/event4Layout"
                        android:layout_width="0dp"
                        android:layout_height="152dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edittext"
                        android:gravity="center"
                        android:visibility="visible"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/gallery4Layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/event4"
                            android:padding="10dp"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp"
                            android:src="@drawable/event_3" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
